--- a/src/index.css
+++ b/src/index.css
@@ -18,14 +18,6 @@ body {
   margin: 0
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 
 h1 {
@@ -39,10 +31,16 @@ h1 {
     color: #213547;
     background-color: #ffffff;
   }
+  a {
+    font-weight: 500;
+    color: #E8E3F1;
+    text-decoration: inherit;
+  }
   a:hover {
-    color: #747bff;
+    color: #FF784F;
+  }
+  
   }
   button {
     background-color: #f9f9f9;
   }
-}
