--- a/src/index.css
+++ b/src/index.css
@@ -51,14 +51,21 @@ h1 {
     max-height: 400px;
 }
 
+.slick-slide {
+  padding: 0 5px;
+  box-sizing: border-box;
+  max-height: 400px;
+}
+
 .slick-slide img {
-  width: 100%;
-  height: auto;
-  display: block;
-  max-height: 100%;
+justify-content: center;
+align-items: center;
+width: 100%;
+height: auto;
+display: block;
 }
 
 .slick-track {
-  display: flex;
-  align-items: center; /* if you want to vertically center the images */
+display: flex;
+align-items: center; 
 }
