--- a/src/index.css
+++ b/src/index.css
@@ -1,71 +1,91 @@
+/* ==============================
+   Root and Global Styles
+   ============================== */
+
+/* Base root styles for fonts, line heights, and colors */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   font-weight: 400;
+  line-height: 1.5;
+  font-synthesis: none;
 
+  /* Color scheme and text rendering */
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
-  font-synthesis: none;
   text-rendering: optimizeLegibility;
+
+  /* Font smoothing */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
 
+/* Global body styles */
 body {
-  margin: 0
+  margin: 0;
+}
+
+/* Global anchor styles */
+body a, a {
+  color: #ffffff !important;
+  text-decoration: none !important;
+} a:hover {
+  color: #FF784F !important;
 }
 
 
+/* ==============================
+   Typography
+   ============================== */
 
+/* Heading 1 styles */
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
 
+/* ==============================
+   Component Specific Styles
+   ============================== */
+
+/* Styles for slick slides */
+.slick-slide {
+  padding: 0 5px;  /* Apply padding to left and right */
+  box-sizing: border-box; /* Ensures that the padding is included in the total width */
+  max-height: 400px;
+}
+
+.slick-slide img {
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.slick-track {
+  display: flex;
+  align-items: center;
+}
+
+
+/* ==============================
+   Media Queries
+   ============================== */
+
+/* Light color scheme */
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
-  a {
-    font-weight: 500;
-    color: #E8E3F1;
-    text-decoration: inherit;
-  }
-  a:hover {
-    color: #FF784F;
-  }
-  
-  }
+
+  /* Button styles in light mode */
   button {
     background-color: #f9f9f9;
   }
 
-  .slick-slide {
-    padding: 0 5px;  /* Apply padding to left and right */
-    box-sizing: border-box; /* Ensures that the padding is included in the total width */
-    max-height: 400px;
-}
 
-.slick-slide {
-  padding: 0 5px;
-  box-sizing: border-box;
-  max-height: 400px;
-}
-
-.slick-slide img {
-justify-content: center;
-align-items: center;
-width: 100%;
-height: auto;
-display: block;
-}
-
-.slick-track {
-display: flex;
-align-items: center; 
 }
