Modified transformImage function Now it receives a width and conditioanlly uses it to apply c_fill and g_auto to the image url

--- a/src/index.css
+++ b/src/index.css
@@ -52,16 +52,16 @@ h1 {
 
 /* Styles for slick slides */
 .slick-slide {
-  padding: 0 5px;  /* Apply padding to left and right */
-  box-sizing: border-box; /* Ensures that the padding is included in the total width */
+  padding: 0 5px;
+  box-sizing: border-box;
   max-height: 400px;
 }
 
 .slick-slide img {
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 300px !important;
+  width: auto;  /* Changed from 100% */
+  max-width: 100%; /* Added to prevent overflow */
   display: block;
 }
 
