--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 /* Base root styles for fonts, line heights, and colors */
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif, 'Architects Daughter';
   font-weight: 400;
   line-height: 1.5;
   font-synthesis: none;
