--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 /* Base root styles for fonts, line heights, and colors */
 :root {
-  font-family: Gluten, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Architects Daughter', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 300;
   line-height: 1.5;
   font-synthesis: none;
