Fixed margin on featured recipes carousel in xs

--- a/src/index.css
+++ b/src/index.css
@@ -75,10 +75,11 @@ h1 {
   margin-top: 0 !important;
 }
 
-.css-9mc7sf-MuiInputAdornment-root {
+
+/* .css-9mc7sf-MuiInputAdornment-root {
   height: auto !important;
   max-height: none !important;
-}
+} */
 
 
 
